name:          k-means-features
version:       0.1.0.0
license:       AllRightsReserved
license-file:  LICENSE
author:        Ian Ross
maintainer:    ian@skybluetrades.net
category:      Data
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules: Data.KMeans.Feature
                 , Data.KMeans.Config
                 , Data.KMeans.Database
  build-depends: base                     >= 4.6        && < 5
               , containers               >= 0.5        && < 0.6
               , vector
               , CV                       >= 0.4
               , aeson
               , bytestring
               , postgresql-simple
               , hmatrix
  hs-source-dirs:   lib
  ghc-options: -Wall -O2
  ghc-prof-options: -auto-all -caf-all
  default-language: Haskell2010

executable build-features
  build-depends: base                     >= 4.6        && < 5
               , k-means-features
               , deepseq
               , directory
               , filepath
               , process
               , unix
               , CV                       >= 0.4
               , random
               , vector
               , hmatrix
  hs-source-dirs: src
  ghc-options: -Wall -O2
  ghc-prof-options: -auto-all -caf-all
  main-is:        build-features.hs

executable process-images
  build-depends: base                     >= 4.6        && < 5
               , k-means-features
               , deepseq
               , directory
               , filepath
               , process
               , unix
               , CV                       >= 0.4
               , random
               , vector
               , hmatrix
  hs-source-dirs: src
  ghc-options: -Wall -O2
  ghc-prof-options: -auto-all -caf-all
  main-is:        process-images.hs

executable image-query
  build-depends: base                     >= 4.6        && < 5
               , k-means-features
               , deepseq
               , containers
               , directory
               , filepath
               , process
               , unix
               , CV                       >= 0.4
               , random
               , vector
               , hmatrix
               , KdTree
  hs-source-dirs: src
  ghc-options: -Wall -O2
  ghc-prof-options: -auto-all -caf-all
  main-is:        image-query.hs
